--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,4 +22,21 @@ body, div { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; font-s
     border: 1px solid #1976d2;
     margin: 5px 0px;
     cursor: pointer;
+    font-size: 16px;
 }
+
+.btn-large {
+    width: 100%;
+}
+
+.example-container input {
+    padding: 7px;
+    font-size: 16px;
+    margin-bottom: 5px;;
+}
+
+.example-container {
+    margin-top: 70%;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
